tests/golden/parse_errors/compound_assignment_field_target.cd
let s = { value: 1 };
s.value += 1;
